--- a/public_html/ion/index.html
+++ b/public_html/ion/index.html
@@ -24,8 +24,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">HOME</a></li>
-						<li><a href="left-sidebar.html">INVESTING</a></li>
-						<li><a href="right-sidebar.html">BANKING</a></li>
+						<li><a href="left-sidebar.html">BANKING</a></li>
+						<li><a href="right-sidebar.html">INVESTING</a></li>
 						<li><a href="no-sidebar.html">CONTACT</a></li>
 						<li><a href="#" class="button special">REGISTER</a></li>
 					</ul>
