--- a/public_html/ion/left-sidebar.html
+++ b/public_html/ion/left-sidebar.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Ion by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
-		<title>Left Sidebar - Ion by TEMPLATED</title>
+		<title>INVESTING</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -24,56 +20,53 @@
 	<body id="top">
 
 		<!-- Header -->
-			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#">Ion</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
-					</ul>
-				</nav>
-			</header>
+	<!-- Header -->
+	<header id="header" class="skel-layers-fixed">
+	<h1><a href="#">PULWAR</a></h1>
+		<nav id="nav">
+			<ul>
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="left-sidebar.html">BANKING</a></li>
+			<li><a href="right-sidebar.html">INVESTING</a></li>
+			<li><a href="no-sidebar.html">CONTACT</a></li>
+			<li><a href="#" class="button special">REGISTER</a></li>
+			</ul>
+		</nav>
+	</header>
 
 		<!-- Main -->
 			<section id="main" class="wrapper style1">
 				<header class="major">
-					<h2>Left Sidebar</h2>
+					<h2>BANKING</h2>
 					<p>Tempus adipiscing commodo ut aliquam blandit</p>
 				</header>
 				<div class="container">
 					<div class="row">
 						<div class="4u">
 							<section>
-								<h3>Magna massa blandit</h3>
-								<p>Feugiat amet accumsan ante aliquet feugiat accumsan. Ante blandit accumsan eu amet tortor non lorem felis semper. Interdum adipiscing orci feugiat penatibus adipiscing col cubilia lorem ipsum dolor sit amet feugiat consequat.</p>
+								<h3>Providing a variety of services to bring investors together with projects and orgnaizations in need of capital</h3>
+								<p>These range from low- and middle-income housing initiatives to businesses of all sizes that are looking to expand. We invest our own resources and those of our clients, continually looking for new ways to turn opportunities into growth.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 							<hr />
 							<section>
-								<h3>Ante sed commodo</h3>
+								<h3>What We Do</h3>
 								<ul class="alt">
-									<li><a href="#">Erat blandit risus vis adipiscing</a></li>
-									<li><a href="#">Tempus ultricies faucibus amet</a></li>
-									<li><a href="#">Arcu commodo non adipiscing quis</a></li>
-									<li><a href="#">Accumsan vis lacinia semper</a></li>
-									<li><a href="#">Erat blandit risus vis adipiscing</a></li>
-									<li><a href="#">Tempus ultricies faucibus amet</a></li>
-									<li><a href="#">Arcu commodo non adipiscing quis</a></li>
-									<li><a href="#">Accumsan vis lacinia semper</a></li>
+									<li><a href="#">Banking</a></li>
+									<li><a href="#">Direct Private Investing</a></li>
+									<li><a href="#">Urban Investing</a></li>
+									<li><a href="#">Middle Market Financing and Investing</a></li>
 								</ul>
 							</section>
 						</div>
 						<div class="8u skel-cell-important">
 							<section>
-								<h2>Mollis ut adipiscing</h2>
+								<h2>Capital</h2>
 								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-								<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
-								<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante.</p>
+								<p>Pulwar accepts deposits, lends to individuals and corporate clients, and transacts in derivatives (including interest rate, credit and foreign currency products).</p>
+								<p>Pulwar deploys capital to help transform distressed communities into sustainable and vibrant neighborhoods of choice and opportunity. GS Bank is committed to helping communities through the work of the Urban Investment Group which provides community development lending, investing and grant making with a focus on renewal.</p>
 							</section>
 						</div>
 					</div>
