--- a/public_html/ion/left-sidebar.html
+++ b/public_html/ion/left-sidebar.html
@@ -44,8 +44,8 @@
 					<div class="row">
 						<div class="4u">
 							<section>
-								<h3>Providing a variety of services to bring investors together with projects and orgnaizations in need of capital</h3>
-								<p>These range from low- and middle-income housing initiatives to businesses of all sizes that are looking to expand. We invest our own resources and those of our clients, continually looking for new ways to turn opportunities into growth.</p>
+								<h3>SERVICES</h3>
+								<p>Providing a variety of services to bring investors together with projects and orgnaizations in need of capital. These range from low- and middle-income housing initiatives to businesses of all sizes that are looking to expand. We invest our own resources and those of our clients, continually looking for new ways to turn opportunities into growth.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -75,8 +75,8 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-								<h3>Mollis adipiscing nisl</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
+								<h3>INVESTING & LENDING</h3>
+								<p>We invest in and originate loans to provide financing to clients. These investments and loans are typically longer term in nature. We make investments, some of which are consolidated, directly and indirectly through funds that we manage, in debt securities and loans, public and private equity securities, and real estate entities.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -85,8 +85,8 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>Neque ornare adipiscing</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
+								<h3>INVESTMENT BANKING</h3>
+								<p>We provide a broad range of investment banking services to a diverse group of corporations, financial institutions, investment funds and governments. Services include strategic advisory assignments with respect to mergers and acquisitions, divestitures, corporate defense activities, risk management, restructurings and spin-offs, and debt and equity underwriting of public offerings and private placements, including domestic and cross-border transactions, as well as derivative transactions directly related to these activities.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
