--- a/public_html/ion/left-sidebar.html
+++ b/public_html/ion/left-sidebar.html
@@ -103,28 +103,27 @@
 						<div class="6u">
 							<div class="row collapse-at-2">
 								<div class="6u">
-									<h3>Accumsan</h3>
+									<h3>PRODUCTS</h3>
 									<ul class="alt">
-										<li><a href="#">Nascetur nunc varius</a></li>
-										<li><a href="#">Vis faucibus sed tempor</a></li>
-										<li><a href="#">Massa amet lobortis vel</a></li>
-										<li><a href="#">Nascetur nunc varius</a></li>
+										<li><a href="#">Mutual Funds</a></li>
+										<li><a href="#">Private Investment Funds</a></li>
+										<li><a href="#">Commodity Funds</a></li>
 									</ul>
 								</div>
 								<div class="6u">
-									<h3>Faucibus</h3>
+									<h3>SERVICES</h3>
 									<ul class="alt">
-										<li><a href="#">Nascetur nunc varius</a></li>
-										<li><a href="#">Vis faucibus sed tempor</a></li>
-										<li><a href="#">Massa amet lobortis vel</a></li>
-										<li><a href="#">Nascetur nunc varius</a></li>
+										<li><a href="#">Portfolio Managment</a></li>
+										<li><a href="#">Financial Counseling</a></li>
+										<li><a href="#">Brokerage</a></li>
+										<li><a href="#">Research & Analysis</a></li>
 									</ul>
 								</div>
 							</div>
 						</div>
 						<div class="6u">
-							<h2>Aliquam Interdum</h2>
-							<p>Blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan justo aliquet.</p>
+							<h2>WHO WE ARE</h2>
+							<p> Pulwar brings people, capital and ideas together to help our clients and the communities we serve. Learn more about our firm.</p>
 							<ul class="icons">
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -135,8 +134,8 @@
 						</div>
 					</div>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>&copy; Pulwar. All rights reserved.</li>
+						<li>Financial Excellence</li>
 						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>
 				</div>
