--- a/public_html/ion/index.html
+++ b/public_html/ion/index.html
@@ -39,7 +39,7 @@
 					<p>Your financial solution.</p>
 					<ul class="actions">
 						<li><a href="#content" class="button big special">Register</a></li>
-						<li><a href="#elements" class="button big alt">Learn More</a></li>
+						<li><a href="#elements" class="button big alt">SIGN IN</a></li>
 					</ul>
 				</div>
 			</section>
