--- a/public_html/money.html
+++ b/public_html/money.html
@@ -3845,13 +3845,13 @@ The Coinage Act of 1857 was an act of the United States Congress which forbade t
 <a name="1873"></a>
 The Coinage Act of 1873 abolished the right of depositors of silver bullion to have their metal struck into legal tender dollar coins, it ended bimetallism in the United States, placing the nation firmly on the gold standard. Because of this, the act became contentious in later years, and was denounced by people who wanted inflation as the "Crime of '73". The matter became a major political controversy that lasted the remainder of the century, pitting those who valued the deflationary gold standard against those who believed free coinage of silver to be necessary for economic prosperity. Accusations were made that the passage of the act had been secured through corruption, though there is little evidence of this. The gold standard was explicitly enacted into law in 1900.
 <br><br><br>
-1900 Gold Standard formalized
+The Gold Standard Act of 1900 established gold as the only standard for redeeming paper money, stopping bimetallism (which had allowed silver in exchange for gold). It was signed by President William McKinley. The Act made the de facto gold standard in place since the Coinage Act of 1873 (whereby debt holders could demand reimbursement in whatever metal was preferred--usually gold) a de jure gold standard alongside other major European powers at the time. The Act fixed the value of the dollar at 25 8⁄10 grains of gold at "nine-tenths fine" (90% purity), equivalent to 23.22 grains (1.5046 grams) of pure gold. The Gold Standard Act confirmed the United States' commitment to the gold standard by assigning gold a specific dollar value (just over $20.67 per Troy ounce). This took place after McKinley sent a team to Europe to try to make a silver agreement with France and Great Britain. On April 25, 1933, the United States and Canada dropped the gold standard.
 <br><br><br>
-1913 Federal Reserve Founded
+The Federal Reserve Act of 1913 is an Act of Congress that created and established the Federal Reserve System, the central banking system of the United States of America, and granted it the legal authority to issue Federal Reserve Notes (now commonly known as the U.S. Dollar) and Federal Reserve Bank Notes as legal tender. The Act was signed into law by President Woodrow Wilson.
 <br><br><br>
-1930s Gold Civilian Ownership Outlawed
+Executive Order 6102 is a United States presidential executive order signed on April 5, 1933, by President Franklin D. Roosevelt "forbidding the Hoarding of gold coin, gold bullion, and gold certificates within the continental United States". The effect of the order, in conjunction with the statute under which it was issued, was to criminalize the possession of monetary gold by any individual, partnership, association or corporation.
 <br><br><br>
-1971 Gold Money Removed
+The 1971 Nixon Shock was a series of economic measures undertaken by United States President Richard Nixon in 1971, the most significant of which was the unilateral cancellation of the direct convertibility of the United States dollar to gold.
   </table>
 
 
